--- a/comicteca/requirements.txt
+++ b/comicteca/requirements.txt
@@ -1,8 +1,10 @@
-django>=1.8,<1.9
+#django>=1.8,<1.9
+django>=1.11,<2.0
 django-countries
 urllib3
 markdown
-sorl-thumbnail==12.3
+#sorl-thumbnail==12.3
+sorl-thumbnail==12.4.1
 Pillow==3.4.1
 #MySQL-python==1.2.5
 psycopg2==2.7.4
